# Django-test

./: .gitignore  pyproject.toml  requirements.txt
django_test/: cli.py  parser.py  parser_urls.py  runner.py  scanner.py  spec_builder.py
django_test/meta/: parser_meta.py  scanner_meta.py
django_test/runs/: test_results.json  tmp_spec.json
