[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "django-test"
version = "0.1.0"
description = "Scan Django project, collect metadata, and run tests"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "SyJoe" }
]

dependencies = [
  "typer>=0.12.0",
  "rich>=13.7.0",
  "google-genai>=0.3.0"
]

[project.scripts]
django-test = "django_test.cli:app"